<resources>
    <string name="app_name">Remote_Assitant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- ### CONTROL TEXTS ###-->
    <string name="mouse_icon">Mouse</string>
    <string name="mouse_remote">Remote mouse</string>

    <!-- ### ERROR TEXTS ### -->
    <string name="error_set_onclick_listeners">An error occurred while setting up this screen.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_ip_address">Enter remote IP address </string>
    <string name="prompt_password">Enter one time password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="empty_ip_address">IP Address cannot be empty.</string>
    <string name="invalid_ip_address">Not a valid IP Address.</string>
    <string name="invalid_password">Password must be >5 characters.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="watermark">Created by - Vick Enev - </string>
    <string name="connection_lost">Connection lost</string>

    <string name="Connection_failed">Connection failed.</string>
</resources>
